# simple-blockchain

./: CMakeLists.txt  Dockerfile  docker-compose.yml
include/: block.hpp  blockchain.hpp  transaction.hpp
libs/: CMakeLists.txt
src/: block.cpp  blockchain.cpp  main.cpp  transaciton.cpp
